@@ -155,6 +155,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #4524: distutils build_script command failed with --with-suffix=3.
+  Initial patch by Amaury Forgeot d'Arc.
+
 - Issue #2461: added tests for distutils.util
 
 - Issue #1008086: Fixed socket.inet_aton() to always return 4 bytes even on
